2006-03-22  Han-Wen Nienhuys  <lilydev@localhost.localdomain>

	* scripts/lilypond-book.py (samefile): new function, for windoze
	compatibility.

2006-03-21  Graham Percival  <gpermus@gmail.com>

	* ly/engraver-init.ly: add info about StaffGroup.

2006-03-21  Han-Wen Nienhuys  <lilydev@localhost.localdomain>

	* input/regression/stem-direction-context.ly: idem.

	* Documentation/topdocs/NEWS.tely (Top): fix interpolation example.

	* THANKS: add Mats.

	* input/regression/page-layout-twopass.ly: comment out \markup so
	tweak-file is left.

	* lily/instrument-name-engraver.cc (finalize): add to instrument
	name global System. This also fixes chopped instrument names, but
	doesn't crash when there are slurs/beams.

	* lily/slur-configuration.cc (add_score): disallow negative slur
	scores.
	
2006-03-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (dump-stencil-as-EPS): remove debugging code.

	* lily/instrument-name-engraver.cc (process_music): kludge: add
	InstrumentName spanner to axis group of left bound. Fixes chopped
	off instrument names in EPS images.

	* input/regression/lyric-hyphen-retain.ly: elaborate explanation.

	* scripts/abc2ly.py (option_parser): update to 2.7.40

2006-03-20  Graham Percival  <gpermus@gmail.com>

	* THANKS: move small doc contributors to SUGGESTIONS.

	* Documentation/user/ basic-notation, advanced-notation,
	global: small changes from mailist.

2006-03-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Text marks): update
	for new rehearsalMarkAlignSymbol convention.

	* VERSION (PATCH_LEVEL): bump version.

	* input/test/instrument-name-align.ly: new file.

	* scm/define-markup-commands.scm (hcenter-in): add hcenter-in.

	* input/test/instrument-name-align.ly: new file. Document how to
	align instrument names.

	* lily/mark-engraver.cc: remove properties.

	* scm/define-context-properties.scm
	(all-user-translation-properties): remove align symbol properties